--- a/ChaosTools.Texture/ChaosTools.Texture.csproj
+++ b/ChaosTools.Texture/ChaosTools.Texture.csproj
@@ -4,8 +4,10 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <ApplicationIcon>chaostools.texture.ico</ApplicationIcon>
+    <ApplicationIcon>chaostools.textool-icon-packed.ico</ApplicationIcon>
     <StartupObject></StartupObject>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
